see #11390, see #11924 - replace `javax.xml.bind.DatatypeConverter` (not visible by default in Java 9) by `java.util.Base64` (new in Java 8)
git-svn-id: http://josm.openstreetmap.de/svn/trunk@10746 0c6e7542-c601-0410-84e7-c038aed88b3b